--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   audioplayers: ^6.1.0
   google_mobile_ads: ^5.3.1
+  connectivity_plus: ^6.1.3
+  provider: ^6.1.5
+  url_launcher: ^6.3.2
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
